--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body{
     padding: 10px 10px;
    
 }
-.next-btn{
+.nextbtn{
     margin-left: 20px;
     padding: 5px 30px;
     background-color: red;
@@ -119,7 +119,49 @@ body{
     font-size: 16px;
     font-weight: 600;
 }
-
+#result{
+    display: none;
+}
+.informationcontainer{
+    width: 400px;
+    padding: 20px 20px;
+    background: blue;
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    opacity: 0;
+    pointer-events: none;
+    text-align: center;
+}
+.informationcontainer h3{
+    color: yellow;
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+.informationcontainer .btn1{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 15px;
+  
+}
+.informationBtn{
+    background-color: black;
+    color: white;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 5px 5px;
+    transition: 0.5s;
+    text-decoration: none;
+    cursor: pointer;
+}
+.informationBtn:hover{
+    background: red;
+    box-shadow: 0 0 10px red;
+    border: black;
+}
 
 
 
